force-app/main/default/objects/Rating_Region__c.object
<CustomObject>
    <description>Healthplan Rating Regions</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Region__c</fullName>
        <label>Rating Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test5__c</fullName>
        <label>Test5</label>
        <type>TextArea</type>
    </fields>
    <label>Rating Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Rating_Region__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Covered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>﻿Zipcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rating Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>