force-app/main/default/objects/Rating_Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Rating_Region__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>County__c</columns>
    <columns>Covered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>